focus, btn align

--- a/src/style.css
+++ b/src/style.css
@@ -144,6 +144,9 @@ body {
   margin: 100px auto;
   padding: 30px;
   background-color: #76c043;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .inputs {
@@ -156,6 +159,10 @@ body {
   width: 230px;
   font-size: 20px;
   margin: 10px;
+}
+
+.inputs:focus {
+  background-color: #78b9e7;
 }
 
 #input3,
@@ -244,6 +251,9 @@ body {
   padding: 30px;
   margin: 20px auto;
   background-color: #76c043;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /*LISTS*/
